Fix header z-index

--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ h1 {
 header {
     position: fixed;
     width: 100%;
+    z-index: 10;
 
     nav {
         align-items: center;
